# TinyInsta

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.database.yml  docker-compose.service.yml  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA-STORES.md  EVENTS.md  FRONTEND.md  ROADMAP.md  hometimeline-svc.md  interaction-svc.md  media-svc.md  messaging-svc.md  post-svc.md  ranking-svc.md  realtime-svc.md  search-svc.md  stories-svc.md  user-svc.md  usertimeline-svc.md
frontend/: CLAUDE.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: app-shell.tsx  app-sidebar.tsx  avatar-cropper.tsx  edit-profile-dialog.tsx  follow-list-dialog.tsx  mobile-nav.tsx  post-card.tsx  post-dialog.tsx  post-grid.tsx  profile-view.tsx  rich-text.tsx  right-rail.tsx  stories-row.tsx  story-camera-dialog.tsx  story-viewer.tsx
frontend/lib/: api.ts  auth-context.tsx  keycloak.ts  realtime.ts  use-realtime.ts  use-search.ts  use-timeline.ts
infra/k8s/: README.md  apps.yaml  config.yaml  (+7 more)
libs/: README.md  pyproject.toml
libs/tinyinsta/auth_jwt/: __init__.py  authentication.py  jwks.py
libs/tinyinsta/bus/: __init__.py  config.py  consumer.py  idempotency.py  producer.py
libs/tinyinsta/events/: __init__.py  envelope.py  registry.py  schemas.py  types.py
libs/tinyinsta/observability/: __init__.py  context.py  logging.py
libs/tinyinsta/service/: __init__.py  apps.py  health.py  middleware.py  settings.py  throttling.py  urls.py
services/: CLAUDE.md  README.md
(+155 files in other folders)
